# vc_image_utils

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILDING.md  CLA.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  clang-format.yml  license-check.yml
src/: main.cpp  placeholder.cpp  stb_impl.cpp
tests/: test_placeholder.cpp
tools/: go.mod  license-header.txt  tools.go
